[gd_scene load_steps=19 format=2]

[ext_resource path="res://tests/interaction/mouse_over_click_3d_obj.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_helper_pack/core/3d/shape/collision_shape_ex.gd" type="Script" id=2]
[ext_resource path="res://addons/godot_helper_pack/core/3d/shape/shape_draw_3d.gd" type="Script" id=3]
[ext_resource path="res://addons/godot_helper_pack/core/3d/outline_helper_3d.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/hud.tscn" type="PackedScene" id=5]

[sub_resource type="ProceduralSky" id=16]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 16 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.207843, 0.556863, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )

[sub_resource type="BoxShape" id=6]

[sub_resource type="ArrayMesh" id=10]
surfaces/0 = {
"aabb": AABB( -1.02887, -1.02887, -1.02887, 2.05773, 2.05774, 2.05774 ),
"array_data": PoolByteArray( 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 63, 0, 0, 127, 64, 0, 0, 0, 0, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 191, 127, 127, 129, 64, 85, 57, 0, 0, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 63, 0, 0, 127, 64, 85, 53, 0, 0, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 191, 127, 127, 129, 64, 0, 60, 0, 0, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 63, 0, 0, 127, 64, 0, 0, 0, 56, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 191, 127, 127, 129, 64, 85, 57, 0, 56, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 63, 0, 0, 127, 64, 85, 53, 0, 56, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 191, 127, 127, 129, 64, 0, 60, 0, 56, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 63, 127, 0, 127, 127, 85, 53, 0, 0, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 191, 129, 0, 0, 63, 0, 0, 0, 56, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 191, 127, 0, 127, 127, 85, 57, 0, 0, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 63, 129, 0, 0, 63, 85, 53, 0, 56, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 63, 127, 0, 127, 127, 85, 53, 0, 56, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 191, 129, 0, 0, 63, 0, 0, 0, 60, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 191, 127, 0, 127, 127, 85, 57, 0, 56, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 63, 129, 0, 0, 63, 85, 53, 0, 60, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 63, 0, 127, 129, 64, 85, 53, 0, 56, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 63, 0, 129, 127, 64, 85, 57, 0, 56, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 63, 0, 127, 129, 64, 85, 57, 0, 56, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 63, 0, 129, 127, 64, 0, 60, 0, 56, 238, 177, 131, 63, 238, 177, 131, 63, 238, 177, 131, 191, 0, 127, 129, 64, 85, 53, 0, 60, 238, 177, 131, 191, 238, 177, 131, 191, 238, 177, 131, 191, 0, 129, 127, 64, 85, 57, 0, 60, 238, 177, 131, 191, 238, 177, 131, 63, 238, 177, 131, 191, 0, 127, 129, 64, 85, 57, 0, 60, 238, 177, 131, 63, 238, 177, 131, 191, 238, 177, 131, 191, 0, 129, 127, 64, 0, 60, 0, 60 ),
"array_index_data": PoolByteArray( 0, 0, 4, 0, 2, 0, 2, 0, 4, 0, 6, 0, 1, 0, 5, 0, 3, 0, 3, 0, 5, 0, 7, 0, 8, 0, 12, 0, 10, 0, 10, 0, 12, 0, 14, 0, 9, 0, 13, 0, 11, 0, 11, 0, 13, 0, 15, 0, 16, 0, 20, 0, 18, 0, 18, 0, 20, 0, 22, 0, 17, 0, 21, 0, 19, 0, 19, 0, 21, 0, 23, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="SpatialMaterial" id=11]
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 0, 0.807843, 1, 1 )

[sub_resource type="BoxShape" id=7]

[sub_resource type="SpatialMaterial" id=20]
albedo_color = Color( 1, 0, 0.607843, 1 )

[sub_resource type="CubeMesh" id=21]
material = SubResource( 20 )

[sub_resource type="SpatialMaterial" id=19]
albedo_color = Color( 0.960784, 1, 0, 1 )

[sub_resource type="SphereMesh" id=15]
material = SubResource( 19 )
radius = 0.2
height = 0.4

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 6, 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]
material_override = SubResource( 3 )
use_collision = true

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
width = 16.0
depth = 12.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.258819, -0.836516, -0.482963, 0, -0.5, 0.866025, -0.965926, -0.224144, -0.12941, 0, 4, 0 )
shadow_enabled = true
shadow_contact = 0.563

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2 )
mesh = SubResource( 5 )

[node name="Area" type="Area" parent="MeshInstance"]
collision_layer = 9

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/Area"]
shape = SubResource( 6 )

[node name="OutlineMeshInstance" type="MeshInstance" parent="MeshInstance/Area"]
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 11 )

[node name="OutlineHelper3D" type="Node" parent="MeshInstance/Area"]
script = ExtResource( 4 )
outline_mesh_instance = NodePath("../OutlineMeshInstance")

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 3, 2 )
collision_layer = 9

[node name="CollisionShapeEx" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 7 )
script = ExtResource( 2 )

[node name="ShapeDraw3D" type="Spatial" parent="RigidBody/CollisionShapeEx"]
script = ExtResource( 3 )
color = Color( 0, 0.227451, 1, 1 )

[node name="OutlineMeshInstance" type="MeshInstance" parent="RigidBody"]
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="OutlineHelper3D" type="Node" parent="RigidBody"]
script = ExtResource( 4 )
outline_mesh_instance = NodePath("../OutlineMeshInstance")

[node name="KinematicBody" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 1, 2 )
collision_layer = 9

[node name="CollisionShapeEx" type="CollisionShape" parent="KinematicBody"]
shape = SubResource( 7 )
script = ExtResource( 2 )

[node name="ShapeDraw3D" type="Spatial" parent="KinematicBody/CollisionShapeEx"]
script = ExtResource( 3 )
color = Color( 1, 0, 0.607843, 1 )

[node name="MeshInstance" type="MeshInstance" parent="KinematicBody/CollisionShapeEx/ShapeDraw3D"]
mesh = SubResource( 21 )

[node name="OutlineMeshInstance" type="MeshInstance" parent="KinematicBody/CollisionShapeEx"]
mesh = SubResource( 10 )
skeleton = NodePath("../..")
material/0 = SubResource( 11 )

[node name="OutlineHelper3D" type="Node" parent="KinematicBody"]
script = ExtResource( 4 )
outline_mesh_instance = NodePath("../CollisionShapeEx/OutlineMeshInstance")

[node name="Hud" parent="." instance=ExtResource( 5 )]

[node name="ClickCollisionMarker" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 3, 0 )
mesh = SubResource( 15 )

[connection signal="input_event" from="MeshInstance/Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="MeshInstance/Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="MeshInstance/Area" to="." method="_on_Area_mouse_exited"]
[connection signal="input_event" from="RigidBody" to="." method="_on_RigidBody_input_event"]
[connection signal="mouse_entered" from="RigidBody" to="." method="_on_RigidBody_mouse_entered"]
[connection signal="mouse_exited" from="RigidBody" to="." method="_on_RigidBody_mouse_exited"]
[connection signal="input_event" from="KinematicBody" to="." method="_on_KinematicBody_input_event"]
[connection signal="mouse_entered" from="KinematicBody" to="." method="_on_KinematicBody_mouse_entered"]
[connection signal="mouse_exited" from="KinematicBody" to="." method="_on_KinematicBody_mouse_exited"]
